# canvas-auto-rubric

./: .gitignore  404.html  README.md  canvasautoplot.html  canvasautorubric.html  generate.js  index.html  input.html  main.py  mkdocs.yml  requirements.txt  sample.csv  setup.cfg  template.js  workflow.html
canvasautoplot/: index.html
canvasautorubric/: __init__.py  __main__.py  index.html  plot.py  utils.py
docs/: canvasautoplot.md  canvasautorubric.md  index.md  input.md  workflow.md
input/: index.html
old/: template.js
search/: search_index.json
workflow/: index.html
