[metadata]
name = canvasautorubric
author = tc-imba
author-email = liuyh615@sjtu.edu.cn
summary = A tool automatically updating grades with rubric on canvas lms
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
project_urls =
    Source Code = https://github.com/tc-imba/canvas-auto-rubric
license = Apache-2
keywords =
    canvaslms

[files]
packages =
    canvasautorubric

[entry_points]
console_scripts =
    canvasautorubric = canvasautorubric:main
